plugins/kotlin/idea/tests/testData/multiplatform/diamondActualOnOnePath/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in left module'")!>ActualizedInLeft<!>
expect class <!LINE_MARKER("descr='Has actuals in right module'")!>ActualizedInRight<!>
